--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <rxnetty-version>0.4.7</rxnetty-version>
         <slf4j-version>1.7.6</slf4j-version>
         <netty-version>4.0.25.Final</netty-version>
+        <jaxrs-version>2.0</jaxrs-version>
     </properties>
 
     <dependencies>
@@ -57,6 +58,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>${jaxrs-version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
